Cierre de sesion y index modificado

--- a/Pagina_Almacenes_Unison/templates/index.html
+++ b/Pagina_Almacenes_Unison/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <a href="{% url 'portal' %}">Inicio</a>
-        <a href="#about">Acerca de</a>
+        <a href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a>
         <a href="#contact">Contacto</a>
     </nav>
     {%block content%}{%endblock%}
