--- a/Pagina_Almacenes_Unison/usuarios/templates/iniciar_sesion.html
+++ b/Pagina_Almacenes_Unison/usuarios/templates/iniciar_sesion.html
@@ -1,32 +1,44 @@
-{% extends "index.html" %}
 {% load static %}
+<html>
+<head>
+    <title>Iniciar Sesión</title>
+</head>
+<body>
 
-{% block title %}
-    Iniciar sesión
-{% endblock %}
+    {% block content %}
+        {% if form.errors %}
+            <p>Error en el inicio de sesión. Por favor, verifica tus credenciales e inténtalo nuevamente.</p>
+        {% endif %}
 
-{% block content %}
-{% if form.errors %}
-<p>Tu usuario y contraseña no coinciden. Inténtalo de nuevo...</p>
-{% endif %}
+        <div class="login">
+            <h2 class="active">Iniciar Sesión</h2>
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Página restringida. No cuentas con los permisos necesarios.</p>
-    {% else %}
-    <p>Acceda a su sesión para tener acceso al contenido.</p>
-    {% endif %}
-{% endif %}
+            <form method="post">
+                <h4>Inicio de Sesión</h4>
+                {% csrf_token %}
 
-<form method="post">
-    <h4>Inicio de Sesión</h4>
-    {% csrf_token %}
-    {{form.as_p}}
+                <input type="text" class="text" name="username" placeholder="Username">
+                <br>
 
-    <button type="submit">Iniciar Sesión</button>
-    <input type="hidden" name="next" value="{{ next }}">
-    <a type="button" href="{% url 'crear_usuario' %}">
-        Crear cuenta
-    </a>  
-</form>
-{% endblock %}
+                <input type="password" class="text" name="password" placeholder="Password">
+                <br>
+
+                <button class="signin" type="submit">
+                    Iniciar Sesión
+                </button>
+
+                <hr>
+
+                <hr class="nonactive"><a href="{% url 'crear_usuario' %}">Crear cuenta</a></hr>
+            </form>
+        </div>
+
+    {% endblock %}
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{% static 'css/inicio_sesion.css' %}">
+
+</body>
+</html>
