--- a/Pagina_Almacenes_Unison/usuarios/templates/crear_usuario.html
+++ b/Pagina_Almacenes_Unison/usuarios/templates/crear_usuario.html
@@ -24,4 +24,6 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="{% static 'crear_usuario.css' %}">
+<link rel="stylesheet" href="{% static 'Fondo.css' %}">
+
 {% endblock %}
