--- a/Pagina_Almacenes_Unison/usuarios/static/Portal.css
+++ b/Pagina_Almacenes_Unison/usuarios/static/Portal.css
@@ -11,21 +11,19 @@
 
 #Botones-Portal {
   padding: 1.3em 3em;
-  font-size: 20px;
+  font-size: 12px;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 2.5px;
-  font-weight: 700;
-  color: #fff;
-  background-color: #007bff;
-  border: 1px solid #0056b3;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-  display: flex;
-  justify-content: space-between;
 }
 
 #Botones-Portal a {
@@ -34,20 +32,37 @@
   height: 100%;
 }
 
-#Botones-Portal:hover {
-  background-color: #0056b3;
+#Botones-Portal a:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
-  border-color: #fff;
   transform: translateY(-7px);
 }
 
-#Botones-Portal a i {
-  font-size: 15px;
-  margin-right: 10px;
+#Botones-Portal a:focus {
+  outline: none;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.6);
 }
 
-#Botones-Portal:hover i {
+#Botones-Portal a:active {
+  transform: translateY(-1px);
+}
+
+#Botones-Portal a i {
+  margin-right: 1em;
+}
+
+#Botones-Portal a.materiales {
+  background-color: #007bff;
   color: #fff;
 }
 
+#Botones-Portal a.reportes {
+  background-color: #ff0000;
+  color: #fff;
+}
 
+#Botones-Portal a.gastos {
+  background-color: #0000ff;
+  color: #fff;
+}
