Update portal_admin.html and portal_intendencia.html

--- a/Pagina_Almacenes_Unison/templates/portal_admin.html
+++ b/Pagina_Almacenes_Unison/templates/portal_admin.html
@@ -5,14 +5,23 @@
 {% block content %}
 
 <body id="content" class="portal-content">
-  <h1>Portal Administrador</h1>
- 
-  <div id:"Botones-Portal" class="portal-content" >
-    <a href="{% url 'lista_materiales' %}">Materiales</a>
-    <a href="{% url 'lista_reportes' %}">Reportes</a>
-    <a href="{% url 'lista_gastos' %}">Gastos</a>
+  <h1>Portal Admin</h1>
+
+  <div id="Botones-Portal" class="portal-content">
+    <a href="{% url 'lista_materiales' %}">
+      <img src="{% static 'img/materiales.png' %}" alt="Materiales">
+      
+    </a>
+    <a href="{% url 'lista_reportes' %}">
+      <img src="{% static 'img/reportes.png' %}" alt="Reportes">
+      
+    </a>
+    <a href="{% url 'lista_gastos' %}">
+      <img src="{% static 'img/gastos.png' %}" alt="Gastos">
+      
+    </a>
   </div>
-  
+
 </body>
 <link rel="stylesheet" href="{% static 'Portal.css' %}">
 {% endblock %}
