--- a/Pagina_Almacenes_Unison/templates/portal_intendencia.html
+++ b/Pagina_Almacenes_Unison/templates/portal_intendencia.html
@@ -6,13 +6,13 @@
 
 <body id="content" class="portal-content">
   <h1>Portal Intendente</h1>
- 
-  <div id:"Botones-Portal" class="portal-content" >
-    <a href="{% url 'lista_materiales' %}">Materiales</a>
-    <a href="{% url 'lista_reportes' %}">Reportes</a>
-    <a href="{% url 'lista_gastos' %}">Gastos</a>
+
+  <div id="Botones-Portal" class="portal-content">
+    <a href="{% url 'lista_materiales' %}">
+      <img src="{% static 'img/materiales.png' %}" alt="Materiales">
+    </a>
   </div>
-  
+
 </body>
 <link rel="stylesheet" href="{% static 'Portal.css' %}">
 {% endblock %}
