Fix negative quantity bug in TomarProducto form

--- a/Pagina_Almacenes_Unison/templates/materiales/tomar_producto.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/tomar_producto.html
@@ -2,24 +2,40 @@
 {% load static %}
 
 {% block title %}
-    Tomar producto
+    Tomar Producto
 {% endblock %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">
-    <div >
-        <h2>Tomar producto</h2>
-        <p><b>Artículo:</b> {{ material.nombre_articulo }}</p>
-        <p><b>Cantidad disponible:</b> {{ material.cantidad }}</p>
-        {% csrf_token %}
-        {{form.as_p}}
+  <div class="container mt-4">
+    <h2 class="text-center">Tomar Producto</h2>
 
-        <button type="submit" class="button-signup" id="btn-submit">
-            Tomar
-        </button>
-        <a type="button" href="{% url 'lista_materiales' %}">
-            Cancelar
-        </a>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-body">
+            <div class="text-center">
+              <p><strong>Artículo:</strong> {{ material.nombre_articulo }}</p>
+              <p><strong>Cantidad disponible:</strong> {{ material.cantidad }}</p>
+              <img src="{{ material.imagen.url }}" alt="{{ material.nombre }}" class="img-thumbnail" width="100">
+            </div>
+
+            <form method="post" enctype="multipart/form-data" class="mt-4">
+              {% csrf_token %}
+              {{ form.as_p }}
+                
+
+              <div class="text-center">
+                <button type="submit" class="btn btn-success" id="btn-submit">
+                  Tomar
+                </button>
+                <a href="{% url 'lista_materiales' %}" class="btn btn-secondary ml-2">
+                  Cancelar
+                </a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-</form>
+  </div>
 {% endblock %}
