--- a/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
@@ -43,16 +43,15 @@
                 </a>
               </td>
               <td>
-                <form method="post" action="{% url 'tomar_producto' pk=material.pk %}" enctype="multipart/form-data" class="mt-4 form-inline">
+                <form method="post" action="{% url 'agregar_al_carrito' pk=material.pk %}" enctype="multipart/form-data" class="mt-4 form-inline">
                   {% csrf_token %}
-                  {{ form.as_p }}
                   <div class="form-group mr-2">
-                    <label for="cantidad{{ material.pk }}">Cantidad a Tomar:</label>
-                    <input type="number" name="cantidad_a_tomar" id="cantidad{{ material.pk }}" class="form-control" min="1" value="1">
+                    <label for="cantidad{{ material.pk }}">Cantidad a Agregar:</label>
+                    <input type="number" name="cantidad_a_agregar" id="cantidad{{ material.pk }}" class="form-control" min="1" value="1">
                   </div>
                   <div class="form-group">
                     <button type="submit" class="btn btn-success" id="btn-submit">
-                      Tomar
+                      Agregar al Carrito
                     </button>
                   </div>
                 </form>
@@ -90,6 +89,10 @@
       ¡Producto tomado exitosamente!
   </div>
 {% endif %}
+
+<div class="text-center mt-4">
+  <a href="{% url 'ver_carrito' %}" class="btn btn-info">Ver Carrito</a>
+</div>
 
   
 {% endblock %}
