--- a/Pagina_Almacenes_Unison/productionfiles/Portal.css
+++ b/Pagina_Almacenes_Unison/productionfiles/Portal.css
@@ -24,6 +24,10 @@
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #Botones-Portal a {
