Update Portal.css and portal_admin.html

--- a/Pagina_Almacenes_Unison/templates/portal_admin.html
+++ b/Pagina_Almacenes_Unison/templates/portal_admin.html
@@ -1,7 +1,6 @@
 {% extends "index.html" %}
 {% load static %}
 
-
 {% block content %}
 
 <body id="content" class="portal-content">
@@ -10,15 +9,15 @@
   <div id="Botones-Portal" class="portal-content">
     <a href="{% url 'lista_materiales' %}">
       <img src="{% static 'img/materiales.png' %}" alt="Materiales">
-      
     </a>
     <a href="{% url 'lista_reportes' %}">
       <img src="{% static 'img/reportes.png' %}" alt="Reportes">
-      
     </a>
     <a href="{% url 'lista_gastos' %}">
       <img src="{% static 'img/gastos.png' %}" alt="Gastos">
-      
+    </a>
+    <a href="{% url 'crear_usuario' %}">
+      <img src="{% static 'img/Usuario.png' %}" alt="Usuario">
     </a>
   </div>
 
