--- a/Pagina_Almacenes_Unison/usuarios/static/Portal.css
+++ b/Pagina_Almacenes_Unison/usuarios/static/Portal.css
@@ -52,8 +52,21 @@
   transform: translateY(-1px);
 }
 
+#Botones-Portal a i,
+#Botones-Portal a img {
+  display: block;
+  margin: 0 auto; /* Center the images horizontally */
+}
+
 #Botones-Portal a i {
   margin-right: 1em;
+  width: 40px; /* Adjust the width according to your preference */
+  height: 40px; /* Adjust the height according to your preference */
+}
+
+#Botones-Portal a img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 #Botones-Portal a.materiales {
