--- a/Pagina_Almacenes_Unison/usuarios/static/Portal.css
+++ b/Pagina_Almacenes_Unison/usuarios/static/Portal.css
@@ -64,11 +64,6 @@
   height: 40px; /* Adjust the height according to your preference */
 }
 
-#Botones-Portal a img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
 #Botones-Portal a.materiales {
   background-color: #007bff;
   color: #fff;
@@ -88,4 +83,21 @@
   background-color: #0000ff;
   color: #fff;
 }
+
+#Botones-Portal a img {
+  max-width: 100%;
+  max-height: 100%;
+  width: 40px; /* Adjust the width according to your preference */
+  height: 40px; /* Adjust the height according to your preference */
+  object-fit: cover; /* Ensure the image covers the entire container */
+}
+
+#Botones-Portal a.materiales img,
+#Botones-Portal a.reportes img,
+#Botones-Portal a.gastos img,
+#Botones-Portal a.Usuarios img {
+  width: 40px; /* Adjust the width according to your preference */
+  height: 40px; /* Adjust the height according to your preference */
+}
+
 
