--- a/Pagina_Almacenes_Unison/usuarios/templates/crear_usuario.html
+++ b/Pagina_Almacenes_Unison/usuarios/templates/crear_usuario.html
@@ -15,7 +15,7 @@
         <button type="submit" class="button-signup" id="btn-submit">
             Crear
         </button>
-        <a href="{% url 'inicio_sesion' %}" class="btn btn-default">Cancelar</a>
+        <a href="{% url 'portal_admin' %}" class="btn btn-default">Cancelar</a>
     </div>
 </form>
 
