--- a/Pagina_Almacenes_Unison/templates/materiales/agregar_producto.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/agregar_producto.html
@@ -15,7 +15,7 @@
         {{form.as_p}}
 
         <button type="submit" class="button-signup" id="btn-submit">
-            Tomar
+            Agregar 
         </button>
         <a type="button" href="{% url 'lista_materiales' %}">
             Cancelar
