--- a/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
@@ -7,19 +7,8 @@
 
 {% block content %}
   <link rel="stylesheet" href="{% static 'lista_materiales.css' %}">
-  <link rel="stylesheet" href="{% static 'lista_materiales_tabla.js' %}">
 
   <h2 class="text-center mb-4">Inventario de Materiales</h2>
-
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">
-        <i class="fas fa-search"></i>
-      </span>
-    </div>
-    <input type="text" id="searchInput" class="form-control" placeholder="Buscar material...">
-  </div>
-
   <form method="post" action="{% url 'agregar_al_carrito_bulk' %}" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="table-container">
@@ -30,8 +19,10 @@
             <th scope="col">Cantidad Disponible</th>
             <th scope="col">Categoría</th>
             <th scope="col">Acciones</th>
+            <th scope="col">Cantidad a agregar a carrito:</th>
             {% if user.is_authenticated and user.rol == 'Admin' %}
               <th scope="col">Administrar</th>
+              <th scope="col">Alarm</th>
             {% endif %}
           </tr>
         </thead>
@@ -46,9 +37,11 @@
                   <a href="{% url 'ver_producto' pk=material.pk %}" class="btn btn-primary btn-sm">
                     Ver Detalles
                   </a>
+                </td>
+                <td>
                   {% if material.cantidad > 0 %}
                     <div class="form-group">
-                      <label for="cantidad{{ material.pk }}">Cantidad a Agregar:</label>
+                      <label for="cantidad{{ material.pk }}"></label>
                       <input type="number" name="cantidades[]" id="cantidad{{ material.pk }}" class="form-control" min="0" value="0">
                       <input type="hidden" name="materiales[]" value="{{ material.pk }}">
                     </div>
@@ -62,34 +55,21 @@
                     <a href="{% url 'agregar_material' pk=material.pk %}">Restablecer Producto</a>
                     <a href="{% url 'eliminar_material' pk=material.pk %}">Eliminar Producto</a>
                   </td>
+                  <td>
+                    {% if material.cantidad <= material.umbral %}
+                      <p>¡Riesgo de desavasto!</p>
+                    {% endif %}
+                  </td>
                 {% endif %}
               </tr>
             {% endfor %}
           {% else %}
             <tr>
-              <td colspan="{% if user.is_authenticated and user.rol == 'Admin' %}6{% else %}4{% endif %}" class="text-center">No hay materiales agregados aún.</td>
+              <td colspan="{% if user.is_authenticated and user.rol == 'Admin' %}7{% else %}6{% endif %}" class="text-center">No hay materiales agregados aún.</td>
             </tr>
           {% endif %}
         </tbody>
       </table>
-    </div>
-
-    <div class="pagination-container">
-      <span class="pagination-links">
-          {% if materiales.has_previous %}
-              <a href="?page=1">&laquo; primera</a>
-              <a href="?page={{ materiales.previous_page_number }}">anterior</a>
-          {% endif %}
-  
-          <span class="current-page">
-              Página {{ materiales.number }} de {{ materiales.paginator.num_pages }}.
-          </span>
-  
-          {% if materiales.has_next %}
-              <a href="?page={{ materiales.next_page_number }}">siguiente</a>
-              <a href="?page={{ materiales.paginator.num_pages }}">última &raquo;</a>
-          {% endif %}
-      </span>
     </div>
 
     {% if request.GET.taken == "true" %}
@@ -99,17 +79,22 @@
     {% endif %}
 
     <div class="text-center mt-4">
+      {% if user.is_authenticated and user.rol == 'Admin' %}
+        <a href="{% url 'portal_admin' %}" class="btn btn-info">Volver al portal</a>
+      {% else %}
+        <a href="{% url 'portal_intendencia' %}" class="btn btn-info">Volver al portal</a>
+      {% endif %}
       <a href="{% url 'ver_carrito' %}" class="btn btn-info">Ver Carrito</a>
       {% if user.is_authenticated and user.rol == 'Admin' %}
         <a href="{% url 'añadir_material' %}" class="btn btn-success">Agregar Material</a>
       {% endif %}
       <button type="submit" class="btn btn-success">Agregar Todos al Carrito</button>
     </div>
-  </form>
+    </form>
+  </body>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      // Otras funciones y scripts si es necesario
     });
   </script>
 
