--- a/Pagina_Almacenes_Unison/templates/portal_intendencia.html
+++ b/Pagina_Almacenes_Unison/templates/portal_intendencia.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <body id="content" class="portal-content">
-  <h1>Portal Intendente</h1>
+  <h1>Portal </h1>
 
   <div id="Botones-Portal" class="portal-content">
     <a href="{% url 'lista_materiales' %}">
