--- a/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/lista_material.html
@@ -57,7 +57,7 @@
                   </td>
                   <td>
                     {% if material.cantidad <= material.umbral %}
-                      <p>¡Riesgo de desavasto!</p>
+                      <p>¡Riesgo de desabasto!</p>
                     {% endif %}
                   </td>
                 {% endif %}
