--- a/Pagina_Almacenes_Unison/templates/materiales/ver_producto.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/ver_producto.html
@@ -16,7 +16,7 @@
             <div class="text-center">
               <p><strong>Artículo:</strong> {{ material.nombre_articulo }}</p>
               <p><strong>Cantidad disponible:</strong> {{ material.cantidad }}</p>
-              <p><strong>Descripcion del Producto:</strong> {{ material.descripcion }}</p>
+              <p><strong>Descripción del Producto:</strong> {{ material.descripcion }}</p>
               <p><strong>Origen del Producto:</strong> {{ material.get_Origen_display }}</p>
               <img src="{{ material.imagen.url }}" alt="{{ material.nombre }}" class="img-thumbnail" width="100">
             </div>
